// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewBadge Snapshots No props 1`] = `
<div
  className="sc-AxjAm jyWUIT"
/>
`;

exports[`NewBadge Snapshots number 1`] = `
<div
  className="sc-AxjAm jyWUIT"
>
  <span
    className="sc-AxirZ hHUunu"
  >
    <span>
      1000
    </span>
  </span>
</div>
`;

exports[`NewBadge Snapshots number 2`] = `
<div
  className="sc-AxjAm jyWUIT"
>
  <span
    className="sc-AxirZ kZsFQc"
  >
    <span>
      10
    </span>
  </span>
</div>
`;

exports[`NewBadge Snapshots with children 1`] = `
<div
  className="sc-AxjAm jyWUIT"
>
  test
  <span
    className="sc-AxirZ hHUunu"
  >
    <span>
      1000
    </span>
  </span>
</div>
`;
